Version 10.4.179 - 24 August 2007, by Thierry Vignaud

- install kernel-desktop-devel-latest instead of
  kernel-source-stripped-latest on upgrade

Version 10.4.178 - 24 August 2007, by Thierry Vignaud

- adapt to new kernel flavors

Version 10.4.177 - 24 August 2007, by Pascal "Pixel" Rigaux

- fix typo in banner name (otherwise internal_error)

Version 10.4.176 - 24 August 2007, by Olivier "blino" Blin

- fix resolving category from module (mainly fix usbhid loading)

Version 10.4.175 - 23 August 2007, by Pascal "Pixel" Rigaux

- fix typo making selectKeyboard step not called
- diskdrake:
  o change the legend and the colors per partition
- drop /etc/sysconfig/usb configuration (not used anymore in initscripts)
- update banner for beta2

Version 10.4.174 - 21 August 2007, by Olivier "blino" Blin

- set default per step banner title & icon for all steps
- fallback on module name if the filename can't be found
  (in the rare case the caller uses '-' in the module name)
- use '_' in module names when explicitely loading them (cosmetics only)
- kill old usb-storage code, mkinitrd now loads it when necessary

Version 10.4.173 - 21 August 2007, by Olivier "blino" Blin

- convert module names to module filenames

Version 10.4.172 - 21 August 2007, by Olivier "blino" Blin

- ignore wmaster* devices when detecting wireless interfaces

Version 10.4.171 - 20 August 2007, by Olivier "blino" Blin

- really use '_' in modules names

Version 10.4.170 - 20 August 2007, by Olivier "blino" Blin

- use '_' in modules names

Version 10.4.169 - 14 August 2007, by Thierry Vignaud

- use better default title & icon for banners
- diskdrake:
  o add support for 'relatime' mount option
  o default all machines to 'relatime' mount option
    (except laptops which use the stronger noatime)
  o kill support for 'nodiratime' mount option

Version 10.4.168 - 13 August 2007, by Pascal "Pixel" Rigaux

- merge root password step and create user step
- fix checking user creation info (#32517)