@@ -1,3 +1,6 @@
+- fix loading linux software raid (mdadm) kernel modules
+  (after rename raid5&raid6 -> raid456)
+
 Version 10.4.179 - 24 August 2007, by Thierry Vignaud
 
 - install kernel-desktop-devel-latest instead of
